Better Loading Time - Reduced image file size - Fixed initial theme button loading opacity   - Now theme button is visible only after theme is loaded

--- a/css/index.css
+++ b/css/index.css
@@ -22,21 +22,22 @@
   position: absolute;
   left: calc(50% - 2rem);
   transition: opacity calc(3 * var(--animation-time)) linear;
+  opacity: 0;
 }
 
-#theme-button.light-theme .icon-light {
+#theme-button.light-theme #icon-light {
   opacity: 1;
 }
 
-#theme-button.light-theme .icon-dark {
+#theme-button.light-theme #icon-dark {
   opacity: 0;
 }
 
-#theme-button.dark-theme .icon-light {
+#theme-button.dark-theme #icon-light {
   opacity: 0;
 }
 
-#theme-button.dark-theme .icon-dark {
+#theme-button.dark-theme #icon-dark {
   opacity: 1;
 }
 
